# Attendance-Management-system

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  Implementation plan  README.md  log.md  pyproject.toml  run.py  seed_db.py  verify_implementation.py
attendance_system/: __init__.py  app.py  config.py  database.py  db_manager.py  schema.sql
attendance_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
attendance_system/blueprints/: __init__.py  admin.py  auth.py  dashboards.py  faculty.py  hod.py  student.py  super_admin.py
attendance_system/decorators/: __init__.py  rbac.py
attendance_system/exceptions/: __init__.py
attendance_system/models/: __init__.py  academic_calendar.py  attendance.py  audit.py  base.py  college.py  department.py  division.py  event_type.py  faculty.py  hod.py  lecture.py  notification.py  parent.py  proxy_lecture.py  proxy_status.py  student.py  subject.py  timetable.py  user.py
attendance_system/routes/: __init__.py  academic.py  attendance.py  attendance_api.py  auth.py  auth_pages.py  college.py  core.py  dashboard.py  departments.py  faculty.py  health.py  hod.py  lectures.py  login.py  lookup.py  main.py  notifications.py  pages.py  parent.py  profile.py  registration.py  reports.py  student.py  students.py  superadmin.py  timetable.py
attendance_system/services/: __init__.py  attendance_service.py  auth_service.py  (+13 more)
docs/: DATABASE.md  FOLDER_STRUCTURE.md  QUICKSTART.md  ROUTES.md  api.md
scripts/: create_admin.py  create_schema.sql  seed_db.py  seed_initial_data.py  verify_routes.py
tests/: test_smoke.py
(+140 files in other folders)
