[project]
name = "attendance-system"
version = "0.1.0"
description = "Smart Attendance Management System"
authors = [{ name = "Team" }]
requires-python = ">=3.11"
dependencies = [
  "Flask>=2.3",
  "pymysql>=1.1.0",
  "matplotlib>=3.8",
  "pdfplumber>=0.10.0",
  "reportlab>=4.0",
  "mysql-connector-python>=8.0.0",
  "weasyprint>=61.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
