[project]
name = "attendance-system"
version = "0.1.0"
description = "Smart Attendance Management System"
authors = [{ name = "Team" }]
requires-python = ">=3.11"
dependencies = [
  "Flask>=2.3",
  "Flask-SQLAlchemy>=3.1",
  "Flask-Migrate>=4.0",
  "PyMySQL>=1.1",
  "mysql-connector-python>=8.0.0",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
